--- a/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/app/src/main/res/layout/fragment_shoe_list.xml
@@ -93,9 +93,11 @@
                     android:layout_height="0dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="128dp"
+                    android:layout_marginEnd="16dp"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="@string/no_shoes_currently_in_the_store"
+                    android:textSize="24sp"
                     android:visibility="@{viewModel.shoeList.isEmpty() ?  View.VISIBLE : View.GONE }" />
 
             </LinearLayout>
