--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,7 @@
         <!--        <item name="colorOnSecondary">@color/black</item>-->
         <item name="colorOnSecondary">@color/logo_gray</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorSecondary</item>
         <!-- Customize your theme here. -->
         <item name="fontFamily">casual</item>
     </style>
